# dockerase

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: display.rs  docker.rs  main.rs  resources.rs  system.rs
src/commands/: list.rs  mod.rs  nuclear.rs  purge.rs  select.rs  system.rs
tests/: cli_tests.rs
