[package]
name = "dockerase"
version = "0.1.0"
edition = "2021"
description = "Docker cleaning utility CLI"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
tabled = "0.15"
bytesize = "1"
dialoguer = "0.11"
